# openclawdev-taskboard

./: .dockerignore  .driftignore  .env.example  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  Dockerfile  OPENCLAW_SETUP.md  README.md  app.py  docker-compose.yml  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: api_quick_reference.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  PROJECT_INDEX.md  USER_GUIDE.md  openapi.yaml
examples/: dev-team-example.md  moltbot-agents.yaml
scripts/: start.ps1
static/: index.html
